# pixeart_app

./: .gitignore  LICENSE  PixeArt.spec  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
packaging/arch/: PKGBUILD
packaging/linux/: build_packages.sh
packaging/windows/: build_msi.ps1
packaging/windows/wix/: installer.wxs
pixeart/: __init__.py  main.py
pixeart/core/: README.md  __init__.py  color.py  commands.py  document.py  effects_logic.py  frame.py  history.py  layer.py  rendering_logic.py  selection_commands.py
pixeart/tools/: __init__.py  base.py  base_tool.py  color_picker.py  eraser.py  fill.py  manager.py  pencil.py  selection.py
pixeart/ui/: animation_controller.py  main_window.py
pixeart/ui/canvas/: __init__.py  canvas.md  reference_layer.py  scene.py  view.py
pixeart/ui/dialogs/: __init__.py  dialogs.md  effects_dialogs.py  export_dialog.py  new_file_dialog.py
pixeart/ui/widgets/: __init__.py  color_palette.py  history_panel.py  landing_page.py  layer_panel.py  navigator.py  timeline.py  toolbar.py  widgets.md
scripts/: fix_color_palette.py  fix_fps.py  test_run.py
tests/test_core/: test_colors.py
